# tools

./: .gitignore  README.md  bilibili_subtitle.py  convert_to_mp3.py  copy_to_clipboard.py  douyin_user_download.py  download_audio.py  download_subtitle.py  download_video.py  epub_guide_html.py  epub_to_clipboard.py  epub_vocab_html.py  extract_nude_scenes.py  file_size.py  file_size.rs  get_subtitle.py  jable_download.rs  pyproject.toml  speed_up_audio.py  split_audio.py  split_media.py  telegram_download.py  transcribe_audio.py  transcribe_audio_groq.py  transcribe_audio_groq.rs  transcribe_local_media.py  transcribe_media_groq.py  transcribe_media_groq.rs  upgrade_yt_dlp.py  whisper_recorder.py  whisper_transcriber.py  yt_dlp_wrapper.py
.cursor/rules/: python-strong-typing.mdc  tool-design.mdc
atoms/: backup_telegram_channel.py  detect_nude_segments.py  download_telegram_message_media.py  export_telegram_messages_markdown.py  render_video_segments.py
docs/: atoms-and-workflows.md  telegram-channel-backup.md
telegram_media/: __init__.py  __main__.py  cli.py  downloader.py  session.py  telethon_api.py
tests/: test_douyin_user_download.py  test_download_audio.py  test_get_subtitle.py  test_telegram_backup_workflow.py  test_telegram_media.py  test_telegram_nude_scene_atoms.py  test_transcribe_local_media.py  test_upgrade_yt_dlp.py  test_yt_dlp_wrapper.py
workflows/: backup_telegram_channel_markdown.py  telegram_nude_scenes.py  youtube_subtitles_to_markdown.py
